implementacion lector dataset y modificacion en ConversorClaseObjetivo.