@@ -1,4 +1,7 @@
-package org.synthcity.modulo_3;
+package org.synthcity.modulo_3.prediccion;
+
+import org.synthcity.modulo_3.ConversorClaseObjetivo;
+import org.synthcity.modulo_3.RegistroDato;
 
 import java.io.BufferedReader;
 import java.io.FileReader;
@@ -6,75 +9,117 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * Lee el dataset de entrenamiento desde un archivo CSV y devuelve una lista de RegistroDato.
+ *
+ * Formato esperado del CSV (15 columnas):
+ *   nombre_ciudad, densidad, ratio_energetico, ratio_cobertura_servicios,
+ *   contaminacion, contaminacion_acumulada, estabilidad_media,
+ *   tendencia_estabilidad, tendencia_contaminacion, bienestar,
+ *   score_viabilidad, ciclos_ejecutados, colapso_detectado,
+ *   saturacion_detectada, objetivo
+ *
+ * La columna nombre_ciudad (índice 0) se ignora como feature.
+ * La columna objetivo (índice 14) contiene la etiqueta nominal: CRITICO, INESTABLE, FUNCIONAL u OPTIMO.
+ *
+ * Registros con objetivo inválido o con número incorrecto de columnas son rechazados
+ * con excepción indicando el número de línea.
+ */
 public class LectorDatasetCSV {
 
+    private static final int COLUMNAS_ESPERADAS = 15;
+
+    /**
+     * Lee el CSV y devuelve la lista de RegistroDato válidos.
+     *
+     * @param rutaArchivo ruta absoluta o relativa al archivo CSV
+     * @return lista de RegistroDato (nunca null, puede estar vacía)
+     * @throws IllegalArgumentException si el archivo no existe, no puede leerse o tiene errores
+     */
     public List<RegistroDato> leer(String rutaArchivo) {
-        if (rutaArchivo == null || rutaArchivo.trim().isEmpty()) {
-            throw new ResultadoSimulacionInvalidoException("La ruta del archivo CSV no puede estar vacía.");
+        if (rutaArchivo == null || rutaArchivo.isBlank()) {
+            throw new IllegalArgumentException("La ruta del archivo CSV no puede ser nula ni vacía.");
         }
 
         List<RegistroDato> registros = new ArrayList<>();
         int numeroLinea = 0;
 
         try (BufferedReader reader = new BufferedReader(new FileReader(rutaArchivo))) {
-            String linea;
 
-
-            if ((linea = reader.readLine()) != null) {
-                numeroLinea++;
+            // Saltar cabecera
+            String cabecera = reader.readLine();
+            numeroLinea++;
+            if (cabecera == null) {
+                throw new IllegalArgumentException("El archivo CSV está vacío: " + rutaArchivo);
             }
 
+            String linea;
             while ((linea = reader.readLine()) != null) {
                 numeroLinea++;
-                linea = linea.trim();
-                if (linea.isEmpty()) continue;
+                if (linea.isBlank()) continue;
+
+                String[] partes = linea.split(",");
+                if (partes.length != COLUMNAS_ESPERADAS) {
+                    throw new IllegalArgumentException(
+                            "Línea " + numeroLinea + ": se esperaban " + COLUMNAS_ESPERADAS +
+                                    " columnas pero se encontraron " + partes.length + ".");
+                }
 
                 try {
-                    RegistroDato registro = parsearLinea(linea, numeroLinea);
+                    RegistroDato registro = parsearLinea(partes, numeroLinea);
                     registros.add(registro);
-                } catch (Exception e) {
-                    System.err.println("[LECTOR CSV] ⚠ Error en línea " + numeroLinea + ": " + e.getMessage());
+                } catch (NumberFormatException e) {
+                    throw new IllegalArgumentException(
+                            "Línea " + numeroLinea + ": error al parsear número: " + e.getMessage(), e);
+                } catch (IllegalArgumentException e) {
+                    throw new IllegalArgumentException(
+                            "Línea " + numeroLinea + ": " + e.getMessage(), e);
                 }
             }
 
         } catch (IOException e) {
-            throw new ResultadoSimulacionInvalidoException("No se pudo leer el archivo: " + rutaArchivo, e);
+            throw new IllegalArgumentException(
+                    "No se puede leer el archivo CSV '" + rutaArchivo + "': " + e.getMessage(), e);
         }
 
         if (registros.isEmpty()) {
-            throw new ResultadoSimulacionInvalidoException("No se encontraron registros válidos en el CSV.");
+            throw new IllegalArgumentException(
+                    "El archivo CSV no contiene registros de datos: " + rutaArchivo);
         }
 
-        System.out.println("[LECTOR CSV] ✅ Éxito: " + registros.size() + " registros cargados desde " + rutaArchivo);
         return registros;
     }
 
-    private RegistroDato parsearLinea(String linea, int numeroLinea) {
-        String[] partes = linea.split(",");
+    /**
+     * Parsea una línea del CSV y construye el RegistroDato correspondiente.
+     * El orden de columnas es fijo (ver cabecera del archivo).
+     */
+    private RegistroDato parsearLinea(String[] partes, int numeroLinea) {
+        // partes[0] = nombre_ciudad  → se ignora
+        double densidad                = Double.parseDouble(partes[1].trim());
+        double ratioEnergetico         = Double.parseDouble(partes[2].trim());
+        double ratioCoberturaServicios = Double.parseDouble(partes[3].trim());
+        double contaminacion           = Double.parseDouble(partes[4].trim());
+        double contaminacionAcumulada  = Double.parseDouble(partes[5].trim());
+        double estabilidadMedia        = Double.parseDouble(partes[6].trim());
+        double tendenciaEstabilidad    = Double.parseDouble(partes[7].trim());
+        double tendenciaContaminacion  = Double.parseDouble(partes[8].trim());
+        double bienestar               = Double.parseDouble(partes[9].trim());
+        double scoreViabilidad         = Double.parseDouble(partes[10].trim());
+        int    ciclosEjecutados        = Integer.parseInt(partes[11].trim());
+        boolean colapsoDetectado       = Boolean.parseBoolean(partes[12].trim());
+        boolean saturacionDetectada    = Boolean.parseBoolean(partes[13].trim());
 
-        if (partes.length < 14) {
-            throw new IllegalArgumentException("Línea " + numeroLinea + " tiene pocas columnas: " + partes.length);
-        }
+        // partes[14] = objetivo nominal → convertir a entero interno
+        String etiqueta = partes[14].trim().toUpperCase();
+        int objetivo = ConversorClaseObjetivo.convertirEntero(etiqueta);
 
-        try {
-            return new RegistroDato(
-                    Double.parseDouble(partes[0].trim()),
-                    Double.parseDouble(partes[1].trim()),
-                    Double.parseDouble(partes[2].trim()),
-                    Double.parseDouble(partes[3].trim()),
-                    Double.parseDouble(partes[4].trim()),
-                    Double.parseDouble(partes[5].trim()),
-                    Double.parseDouble(partes[6].trim()),
-                    Double.parseDouble(partes[7].trim()),
-                    Double.parseDouble(partes[8].trim()),
-                    Double.parseDouble(partes[9].trim()),
-                    Boolean.parseBoolean(partes[10].trim()),
-                    Integer.parseInt(partes[11].trim()),
-                    Boolean.parseBoolean(partes[12].trim()),
-                    Integer.parseInt(partes[13].trim())
-            );
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("Error de formato numérico en línea " + numeroLinea, e);
-        }
+        return new RegistroDato(
+                densidad, ratioEnergetico, ratioCoberturaServicios,
+                contaminacion, contaminacionAcumulada, estabilidadMedia,
+                tendenciaEstabilidad, tendenciaContaminacion, bienestar,
+                scoreViabilidad, colapsoDetectado, ciclosEjecutados,
+                saturacionDetectada, objetivo
+        );
     }
 }
